# dataward

./: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
.todos/: 14-plan.md  15-plan.md  3-plan.md  4-plan.md  review-report.md  review-verdict.md
docs/: phase7-discovery.md  phase7-worker-investigation.md
docs/brainstorms/: 2026-02-23-dataward-architecture-brainstorm.md
docs/plans/: 013-2026-04-08-comprehensive-breach-minimization-purge-plan.md  1-2026-02-23-comprehensive-dataward-architecture-plan.md  2026-02-24-standard-patchright-worker-plan.md  2026-02-25-comprehensive-web-dashboard-plan.md  2026-03-01-comprehensive-phase5-distribution-playbooks-plan.md
docs/runbooks/: k-dedup-rotation.md
docs/solutions/best-practices/: atomic-file-ops-crash-recovery-20260224.md  axum-dashboard-security-patterns-20260225.md  shared-validation-across-dispatch-channels-20260224.md  subprocess-timeout-pattern-rust-20260301.md
docs/solutions/database-issues/: toctou-race-select-then-update-sqlite-20260225.md
docs/solutions/logic-errors/: rate-limited-task-redispatch-loop-20260224.md  rust-string-byte-slice-usize-underflow-20260310.md
docs/solutions/runtime-errors/: settimeout-32bit-overflow-node-20260224.md
docs/solutions/security-issues/: constant-time-comparison-length-leak-20260225.md  multi-resource-rekey-ordering-20260310.md  path-traversal-defense-patterns-20260224.md
docs/solutions/test-failures/: esm-mocking-vitest-node-fs-20260224.md
playbooks/: README.md  platform.sums
playbooks/official/: fastpeoplesearch.yaml  radaris.yaml  truepeoplesearch.yaml
playbooks/platform/: example-email.yaml  example-manual-only.yaml  example-web-form.yaml
src/: api_worker.rs  broker_registry.rs  config.rs  crypto.rs  db.rs  download.rs  email_worker.rs  init.rs  legal_ack.rs  logging.rs  main.rs  orchestrator.rs  phase7_audit.rs  rekey.rs  retention.rs  scheduler.rs  status.rs  subprocess.rs  worker_setup.rs
src/dashboard/: auth.rs  mod.rs
src/dashboard/handlers/: captcha.rs  discovery.rs  health.rs  history.rs  mod.rs  proof.rs  status.rs  trigger.rs
src/discovery/: bitwarden.rs  dedup.rs  firefox.rs  gmail_imap.rs  keychain_csv.rs  mod.rs  normalize.rs  scoring.rs  scrub.rs  tests.rs
templates/: base.html  captcha.html  captcha_queue.html  health.html  history.html  login.html  status.html  status_table.html
worker/: package-lock.json  package.json  tsconfig.json
worker/src/: actions.ts  domain.ts  interpreter.ts  types.ts  worker.ts
worker/src/tests/: actions.test.ts  domain.test.ts  interpreter.test.ts  types.test.ts  worker.test.ts
